--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "start":"parcel reacthtml.html",
+    "start":"parcel index.html",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "browserslist": [],
